--- a/index.html
+++ b/index.html
@@ -1,83 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>E.F.M.O. Boadilla 'B'</title>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<style>
-  body {
-    margin: 0;
-    font-family: "Trebuchet MS", sans-serif;
-    background: linear-gradient(160deg, #0d0d1a, #1a1a33);
-    color: #00fff7;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E.F.M.O. Boadilla 'B'</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-  .title-container {
-    width: fit-content;
-    margin: 30px auto;
-    padding: 20px 40px;
-    border-radius: 20px;
-    background: linear-gradient(90deg, #00d4ff, #a200ff);
-    box-shadow: 0 0 20px rgba(0,212,255,0.6), 0 0 30px rgba(162,0,255,0.4);
-  }
+    body {
+      margin: 0;
+      font-family: "Trebuchet MS", sans-serif;
+      background: linear-gradient(160deg, #0d0d1a, #1a1a33);
+      color: #00fff7;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
 
-  .title {
-    font-size: 3em;
-    font-family: Oswald, fantasy;
-    font-weight: bold;
-    margin: 0;
-  }
+    .title-container {
+      width: 90%;
+      max-width: 700px;
+      margin: 20px auto;
+      padding: 15px 20px;
+      border-radius: 20px;
+      background: linear-gradient(90deg, #00d4ff, #a200ff);
+      box-shadow: 0 0 20px rgba(0,212,255,0.6), 0 0 30px rgba(162,0,255,0.4);
+      overflow: hidden;
+    }
 
-  .title span:nth-child(odd) { color: hsl(0,90%,55%); }
-  .title span:nth-child(even) { color: white; }
+    .title {
+      font-size: 2.5em;
+      font-family: Oswald, fantasy;
+      font-weight: bold;
+      margin: 0;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
-  .panel-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
-    max-width: 700px;
-    margin: 0 auto;
-  }
+    .title span:nth-child(odd) { color: hsl(0,90%,55%); }
+    .title span:nth-child(even) { color: white; }
 
-  .panel {
-    background: linear-gradient(145deg, #11112a, #1b1b4d);
-    border-radius: 25px;
-    padding: 30px 20px;
-    text-align: center;
-    box-shadow: 0 10px 25px rgba(0,255,255,0.2);
-    text-decoration: none;
-  }
+    .panel-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+      width: 100%;
+      flex: 1;
+    }
 
-  .panel-icon {
-    font-size: 60px;
-    margin-bottom: 15px;
-    color: #00ff99;
-  }
+    .panel {
+      background: linear-gradient(145deg, #11112a, #1b1b4d);
+      border-radius: 25px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 10px 25px rgba(0,255,255,0.2);
+      text-decoration: none;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-  .panel-title {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #00fff7;
-    text-shadow: 0 0 5px #00fff7;
-    font-family: "Trebuchet MS", sans-serif;
-  }
+    .panel:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 30px rgba(0,255,255,0.3);
+    }
 
-  footer {
-    text-align: center;
-    padding: 30px 20px;
-    color: #00fff7;
-    font-size: 1.2em;        /* igual que panel-title */
-    font-weight: bold;        /* igual que panel-title */
-    font-family: "Trebuchet MS", sans-serif; /* igual que panel-title */
-  }
+    .panel-icon {
+      font-size: 60px;
+      margin-bottom: 15px;
+      color: #00ff99;
+    }
 
-  @media(max-width: 500px){
-    .panel { padding: 25px 10px; }
-    .panel-icon { font-size: 50px; }
-  }
-</style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    .panel-title {
+      font-size: 1.2em;
+      font-weight: bold;
+      color: #00fff7;
+      text-shadow: 0 0 5px #00fff7;
+      font-family: "Trebuchet MS", sans-serif;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #00fff7;
+      font-size: 1.2em;
+      font-weight: bold;
+      font-family: "Trebuchet MS", sans-serif;
+      margin-top: auto;
+    }
+
+    /* Media Queries para dispositivos móviles */
+    @media (max-width: 768px) {
+      .title {
+        font-size: 1.8em;
+        white-space: normal;
+      }
+
+      .title-container {
+        padding: 12px 15px;
+        margin: 15px auto;
+      }
+
+      .panel-container {
+        grid-template-columns: 1fr;
+        gap: 15px;
+        padding: 15px;
+      }
+
+      .panel {
+        padding: 20px 15px;
+      }
+
+      .panel-icon {
+        font-size: 50px;
+      }
+
+      footer {
+        font-size: 1em;
+        padding: 15px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .title {
+        font-size: 1.5em;
+      }
+
+      .title-container {
+        padding: 10px 12px;
+        margin: 10px auto;
+      }
+
+      .panel-container {
+        gap: 12px;
+        padding: 10px;
+      }
+
+      .panel {
+        padding: 15px 10px;
+      }
+
+      .panel-icon {
+        font-size: 45px;
+      }
+
+      .panel-title {
+        font-size: 1.1em;
+      }
+    }
+  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
