--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -792,6 +792,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -804,7 +805,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'}
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
+        {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'Duda', performances:[
@@ -816,10 +818,11 @@
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
-    { id:4, name:'Luisja', pos:'Defensa', status:'OK', performances:[
+    { id:4, name:'Luisja', pos:'Defensa', status:'Duda', performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
@@ -828,7 +831,8 @@
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(8,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (0,0+🅰️)'}, //1 assist?
-        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Atacante', status:'OK', performances:[
@@ -840,7 +844,8 @@
         {points:3, minutes:62, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,7)'},
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
         {points:null, minutes:57, goals:0, assists:1, cards:1, comment:'🟨🅰️ (0,0+🅰️)'}, //1 assist?
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
+        {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'Duda', performances:[
@@ -852,7 +857,8 @@
         {points:7, minutes:90, goals:0, assists:0, cards:0, comment:'(7,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', performances:[
@@ -864,7 +870,8 @@
         {points:-8, minutes:53, goals:0, assists:0, cards:0, comment:'🟥 (5,4+🟥)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'Duda', performances:[
@@ -876,7 +883,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:2, minutes:65, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'}
+        {points:2, minutes:65, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Duda', performances:[
@@ -888,7 +896,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'🟥 (7,0+🟥)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'}
+        {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', performances:[
@@ -900,7 +909,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:3, minutes:25, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'}
+        {points:3, minutes:25, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', performances:[
@@ -912,7 +922,8 @@
         {points:2, minutes:2, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:11, minutes:61, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:3, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'}
+        {points:3, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Defensa', status:'Lesionado', performances:[
@@ -921,6 +932,7 @@
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:3, minutes:19, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:3, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -936,7 +948,8 @@
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,9)'},
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,5+🅰️)'}
+        {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,5+🅰️)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:14, name:'Kito', pos:'Centrocampista', status:'OK', performances:[
@@ -948,7 +961,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:7, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'}
+        {points:7, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'},
+        {points:null, minutes:45, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', performances:[
@@ -960,7 +974,8 @@
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,1)'},
         {points:3, minutes:38, goals:0, assists:0, cards:0, comment:'↪️ (6,6)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'}
+        {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
+        {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'Lesionado', performances:[
@@ -972,11 +987,12 @@
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(8,7)'},
         {points:8, minutes:90, goals:0, assists:0, cards:0, comment:'(7,7)'},
         {points:null, minutes:33, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
 
       ]},
 
-    { id:17, name:'Pablo', pos:'Centrocampista', status:'Duda', performances:[
+    { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', performances:[
         {points:4, minutes:69, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -985,7 +1001,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:11, minutes:70, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,4+⚽)'}
+        {points:11, minutes:70, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,4+⚽)'},
+        {points:null, minutes:80, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'Duda', performances:[
@@ -997,7 +1014,8 @@
         {points:9, minutes:28, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', performances:[
@@ -1009,7 +1027,8 @@
         {points:0, minutes:62, goals:0, assists:0, cards:0, comment:'↪️ (6,0)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'}
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', performances:[
@@ -1021,7 +1040,8 @@
         {points:5, minutes:28, goals:0, assists:0, cards:0, comment:'↩️ (7,0)'},
         {points:8, minutes:61, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,4+🅰️)'},
         {points:null, minutes:66, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'}
+        {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', performances:[
@@ -1033,7 +1053,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:3, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:null, minutes:24, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:5, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'}
+        {points:5, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Duda', performances:[
@@ -1045,7 +1066,8 @@
         {points:2, minutes:88, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:6, minutes:52, goals:0, assists:0, cards:0, comment:'↩️ (7,3)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:23, name:'Manu Medina', pos:'Atacante', status:'OK', performances:[
@@ -1057,13 +1079,15 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'}
+        {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Lesionado', performances:[
         {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
         {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
         {points:1, minutes:27, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1081,7 +1105,8 @@
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,1+⚽)'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
         {points:null, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (0,0+⚽)'},
-        {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'}
+        {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'},
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', performances:[
@@ -1093,34 +1118,34 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:3, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'}
       ]}
   ];
 
   // 📰 Noticias del equipo
   const news = [
-    { playerId: 22, title: 'Duda', text: "Lesión desconocida, desconocido" },
-    { playerId: 17, title: 'Duda', text: "Golpe en la pierna, desconocido" },
+    { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ9.html' },
+    { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
+    { playerId: 22, title: 'Duda', text: "Enfermedad, 1-2 semanas" },
     { playerId: 16, title: 'Lesión', text: "Lesión en los isquios, desconocido" },
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
-    { playerId: 3, title: 'Duda', text: "Molestias en el tobillo y en el cuello, desconocido" },
+    { playerId: 3, title: 'Duda', text: "Molestias en el tobillo, cuello, costillas y contusión en la cabeza, desconocido" },
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
-    { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, desconocido" }, //Javi Pardo
-    { playerId: 6, title: 'Duda', text: "Lesión de tobillo, desconocido" }, //Rafa
+    { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, 3-4 semanas" }, //Javi Pardo
+    { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
     { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
-    { playerId: 8, title: 'Duda', text: "Pubalgia, 4-6 semanas" },
-    { playerId: 24, title: 'Lesión', text: "Edema óseo, 5-6 semanas" },
-    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 5-7 semanas" },
+    { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" },
+    { playerId: 24, title: 'Lesión', text: "Edema óseo, 8-10 semanas" },
+    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 8-10 semanas" },
     { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
-    { playerId: 1, title: 'Duda', text: "Rotura fibrilar en el cuádriceps, 3-6 semanas" },
+    { playerId: 1, title: 'Duda', text: "Rotura fibrilar en el cuádriceps, 9-11 semanas" },
     { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
-    //{ playerId: 17, title: 'Duda', text: "Fractura de muñeca, 5-7 semanas" },
     { playerId: null, title: 'Jornada 1', text: "CF Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'", url: 'InformeJ1.html' },
-    //{ playerId: 21, title: 'Duda', text: "Lesión en el abductor, 5 meses" },
     { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
   ];
 
